spectec/test/elab/neg/ctx-metavar-id-has-suffix.t
  $ ./main.exe ctx-metavar-id-has-suffix.spectec 2>&1
  error: invalid meta-variable identifier
    --> ctx-metavar-id-has-suffix.spectec:4:5
    |
  4 | var x_1 : nat
    |     ^^^
    |
    | source: elab
  [1]
